Update the book

--- a/RDD.html
+++ b/RDD.html
@@ -130,7 +130,7 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
 <li class="chapter" data-level="1.4" data-path="R-intro.html"><a href="R-intro.html#getting-help"><i class="fa fa-check"></i><b>1.4</b> Getting Help</a></li>
 <li class="chapter" data-level="1.5" data-path="R-intro.html"><a href="R-intro.html#installing-packages"><i class="fa fa-check"></i><b>1.5</b> Installing Packages</a></li>
 <li class="chapter" data-level="1.6" data-path="R-intro.html"><a href="R-intro.html#code-output"><i class="fa fa-check"></i><b>1.6</b> <code>Code</code> vs Output in this Book</a></li>
-<li class="chapter" data-level="1.7" data-path="R-intro.html"><a href="R-intro.html#install-package"><i class="fa fa-check"></i><b>1.7</b> <code>ScPoEconometrics</code> Package</a></li>
+<li class="chapter" data-level="1.7" data-path="R-intro.html"><a href="R-intro.html#install-package"><i class="fa fa-check"></i><b>1.7</b> <code>ScPoApps</code> Package</a></li>
 <li class="chapter" data-level="1.8" data-path="R-intro.html"><a href="R-intro.html#data-types"><i class="fa fa-check"></i><b>1.8</b> Data Types</a></li>
 <li class="chapter" data-level="1.9" data-path="R-intro.html"><a href="R-intro.html#data-structures"><i class="fa fa-check"></i><b>1.9</b> Data Structures</a></li>
 <li class="chapter" data-level="1.10" data-path="R-intro.html"><a href="R-intro.html#dataframes"><i class="fa fa-check"></i><b>1.10</b> Data Frames</a></li>
@@ -237,7 +237,7 @@ D_i = \begin{cases}\begin{array}{c}1\text{ if }x_i &gt; c \\
 \end{equation*}\]</span>
 <p>Here's the obligatory DAG!</p>
 <div class="figure" style="text-align: center"><span id="fig:rdd1"></span>
-<img src="09-RDD_files/figure-html/rdd1-1.png" alt="DAG for a simple RDD design: $x$ determines treatment via the cutoff $c$" width="672" />
+<img src="ScPoEconometrics_files/figure-html/rdd1-1.png" alt="DAG for a simple RDD design: $x$ determines treatment via the cutoff $c$" width="672" />
 <p class="caption">
 Figure 9.1: DAG for a simple RDD design: <span class="math inline">\(x\)</span> determines treatment via the cutoff <span class="math inline">\(c\)</span>
 </p>
@@ -249,7 +249,7 @@ Figure 9.1: DAG for a simple RDD design: <span class="math inline">\(x\)</span> 
 </ol>
 <p>In our DAG, point 1 above is not currently visible. Let's augment this:</p>
 <div class="figure" style="text-align: center"><span id="fig:rdd2"></span>
-<img src="09-RDD_files/figure-html/rdd2-1.png" alt="Augmented DAG for a simple RDD design: $x$ determines treatment via the cutoff $c$" width="672" />
+<img src="ScPoEconometrics_files/figure-html/rdd2-1.png" alt="Augmented DAG for a simple RDD design: $x$ determines treatment via the cutoff $c$" width="672" />
 <p class="caption">
 Figure 9.2: Augmented DAG for a simple RDD design: <span class="math inline">\(x\)</span> determines treatment via the cutoff <span class="math inline">\(c\)</span>
 </p>
