--- a/std-errors.html
+++ b/std-errors.html
@@ -130,7 +130,7 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
 <li class="chapter" data-level="1.4" data-path="R-intro.html"><a href="R-intro.html#getting-help"><i class="fa fa-check"></i><b>1.4</b> Getting Help</a></li>
 <li class="chapter" data-level="1.5" data-path="R-intro.html"><a href="R-intro.html#installing-packages"><i class="fa fa-check"></i><b>1.5</b> Installing Packages</a></li>
 <li class="chapter" data-level="1.6" data-path="R-intro.html"><a href="R-intro.html#code-output"><i class="fa fa-check"></i><b>1.6</b> <code>Code</code> vs Output in this Book</a></li>
-<li class="chapter" data-level="1.7" data-path="R-intro.html"><a href="R-intro.html#install-package"><i class="fa fa-check"></i><b>1.7</b> <code>ScPoEconometrics</code> Package</a></li>
+<li class="chapter" data-level="1.7" data-path="R-intro.html"><a href="R-intro.html#install-package"><i class="fa fa-check"></i><b>1.7</b> <code>ScPoApps</code> Package</a></li>
 <li class="chapter" data-level="1.8" data-path="R-intro.html"><a href="R-intro.html#data-types"><i class="fa fa-check"></i><b>1.8</b> Data Types</a></li>
 <li class="chapter" data-level="1.9" data-path="R-intro.html"><a href="R-intro.html#data-structures"><i class="fa fa-check"></i><b>1.9</b> Data Structures</a></li>
 <li class="chapter" data-level="1.10" data-path="R-intro.html"><a href="R-intro.html#dataframes"><i class="fa fa-check"></i><b>1.10</b> Data Frames</a></li>
@@ -220,7 +220,7 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
 <h1><span class="header-section-number">Chapter 6</span> Regression Inference</h1>
 <p>In this chapter we want to investigate uncertainty in regression estimates. We want to understand what the precise meaning of the <code>Std. Error</code> column in a typical regression table is telling us. In terms of a picture, we want to understand better the meaning of the shaded area as in this one here:</p>
 <div class="figure" style="text-align: center"><span id="fig:confint"></span>
-<img src="06-StdErrors_files/figure-html/confint-1.png" alt="Confidence bands around a regression line." width="672" />
+<img src="ScPoEconometrics_files/figure-html/confint-1.png" alt="Confidence bands around a regression line." width="672" />
 <p class="caption">
 Figure 6.1: Confidence bands around a regression line.
 </p>
@@ -236,21 +236,21 @@ What is the proportion of <strong>green</strong> Fusilli in a pack of Tricolore 
 </div>
 <p><br></p>
 <p>Well, it's time to find out.</p>
-<div class="figure"><span id="fig:pasta1"></span>
+<div class="figure" style="text-align: center"><span id="fig:pasta1"></span>
 <img src="images/pasta1.JPG" alt="A glass jar filled with Fusilli pasta in three different colors." width="90%" />
 <p class="caption">
 Figure 6.2: A glass jar filled with Fusilli pasta in three different colors.
 </p>
 </div>
 <p>Let's call the fusilly in this jar our <em>study population</em>, i.e. the set of units about which we want to learn something. There are several approaches to address the question of how big a proportion in the population the green Fusilli make up. One obvious solution is to enumerate all Fusilli according to their color, and compute their proportion in the entire population. It works perfectly well as a solution, but is a long and arduous process, see figures <a href="std-errors.html#fig:pasta2">6.3</a> and <a href="std-errors.html#fig:pasta3">6.4</a>.</p>
-<div class="figure"><span id="fig:pasta2"></span>
+<div class="figure" style="text-align: center"><span id="fig:pasta2"></span>
 <img src="images/pasta2.JPG" alt="Manually separating Fusilli by their color is very costly in terms of effort and cost." width="90%" />
 <p class="caption">
 Figure 6.3: Manually separating Fusilli by their color is very costly in terms of effort and cost.
 </p>
 </div>
 <p>Additionally, you may draw worried looks from the people around you, while you are doing it. Maybe this is not the right way to approach this task?<a href="#fn7" class="footnoteRef" id="fnref7"><sup>7</sup></a></p>
-<div class="figure"><span id="fig:pasta3"></span>
+<div class="figure" style="text-align: center"><span id="fig:pasta3"></span>
 <img src="images/pasta3.JPG" alt="Heaps of Fusilli pasta ready to be counted." width="90%" />
 <p class="caption">
 Figure 6.4: Heaps of Fusilli pasta ready to be counted.
@@ -286,7 +286,7 @@ Figure 6.4: Heaps of Fusilli pasta ready to be counted.
 </tbody>
 </table>
 <p>So far, so good. We have our first <em>estimate of the population proportion of green Fusilli in the overall population</em>: 0.25. Notice that taking a sample of <span class="math inline">\(N=20\)</span> was <em>much</em> quicker and <em>much less painful</em> than performing the full count (i.e. the <em>census</em>) of Fusilli performed above.</p>
-<div class="figure"><span id="fig:pasta5"></span>
+<div class="figure" style="text-align: center"><span id="fig:pasta5"></span>
 <img src="images/pasta5.JPG" alt="Taking one sample of 20 Fusilli from the jar." width="90%" />
 <p class="caption">
 Figure 6.5: Taking one sample of 20 Fusilli from the jar.
@@ -304,7 +304,7 @@ Figure 6.5: Taking one sample of 20 Fusilli from the jar.
 <div id="taking-eleven-samples-from-the-population" class="section level2">
 <h2><span class="header-section-number">6.2</span> Taking Eleven Samples From The Population</h2>
 <p>We formed teams of two students in class who would each in turn take samples from the jar (the population) of size <span class="math inline">\(N=20\)</span>, as before. Each team computed the proportion of green Fusilli they had in their sample, and we wrote this data down in a table on the board. Then, we drew a histogram which showed how many samples had fallen into which bins.</p>
-<div class="figure"><span id="fig:pasta6"></span>
+<div class="figure" style="text-align: center"><span id="fig:pasta6"></span>
 <img src="images/pasta6.JPG" alt="Taking eleven samples of 20 Fusilli each from the jar, and plotting the histogram of obtained sample proportions of Green Fusilli." width="90%" />
 <p class="caption">
 Figure 6.6: Taking eleven samples of 20 Fusilli each from the jar, and plotting the histogram of obtained sample proportions of Green Fusilli.
@@ -333,7 +333,7 @@ pasta_samples</code></pre></div>
 ## 10    10        10       0.25
 ## 11    11        11       0.20</code></pre>
 <p>This produces an associated histogram which looks very much like the one we draws onto the board:</p>
-<p><img src="06-StdErrors_files/figure-html/pasta-hist-1.png" width="672" /></p>
+<p><img src="ScPoEconometrics_files/figure-html/pasta-hist-1.png" width="672" style="display: block; margin: auto;" /></p>
 <div id="recap" class="section level3">
 <h3><span class="header-section-number">6.2.1</span> Recap</h3>
 <p>Let's recaptiulate what we just did. We wanted to know what proportion of Fusilli in the glass jar in figure <a href="std-errors.html#fig:pasta1">6.2</a> are green. We acknowledged that an exclusive count, or a census, is a costly and cumbersome exercise, which in most circumstances we will try to avoid. In order to make some progress nonetheless, we took a <em>random sample</em> from the full population in the jar: we randomly selected 20 Fusilli, and looked at the proportion of green ones in there. We found a proportion of 0.25.</p>
@@ -353,7 +353,7 @@ The value of this exercise consisted in making <strong>you</strong> perform the 
 </div>
 <div id="handover-to-moderndive" class="section level2">
 <h2><span class="header-section-number">6.3</span> Handover to <code>Moderndive</code></h2>
-<div class="figure"><span id="fig:handover"></span>
+<div class="figure" style="text-align: center"><span id="fig:handover"></span>
 <img src="images/transition.png" alt="The Moderndive package used red and white balls instead of fusilli pasta." width="90%" />
 <p class="caption">
 Figure 6.7: The Moderndive package used red and white balls instead of fusilli pasta.
@@ -421,7 +421,7 @@ mtcars <span class="op">%&gt;%</span>
 That the coefficient on <code>wtplus</code> is <code>NA</code> is the result of the direct linear dependence. (Notice that creating <code>wtplus2 = (wt + 1)^2</code>) would work, since that is not linear!)</li>
 <li>Conditional Mean of errors is zero, <span class="math inline">\(E[\varepsilon|x] = 0\)</span>. Going back to our running example in figure <a href="std-errors.html#fig:confint">6.1</a> about wages and education: Suppose that each individual <span class="math inline">\(i\)</span> in our data something like <em>innate ability</em>, something we might wish to measure with an IQ-test, however imperfecty. Let's call it <span class="math inline">\(a_i\)</span>. It seems reasonable to think that high <span class="math inline">\(a_i\)</span> will go together with high wages. At the same time, people with high <span class="math inline">\(a_i\)</span> will find studying for exams and school work much less burdensome than others, hence they might select into obtaining more years of schooling. The problem? Well, there is no <span class="math inline">\(a_i\)</span> in our regression equation - most of time we don't have a good measure of it to start with. So it's an <em>unobserved variable</em>, and as such, it is part of the error term <span class="math inline">\(\varepsilon\)</span> in our model. We will attribute to <code>educ</code> part of the effect on wages that is actually <em>caused</em> by ability <span class="math inline">\(a_i\)</span>! Sometimes we may be able to reason about whether our estimate on <code>educ</code> is too high or too low, but we will never know it's true value. We don't get the <em>ceteris paribus</em> effect (the true partial derivative of <code>educ</code> on <code>lwage</code>). Technically, the assumption <span class="math inline">\(E[\varepsilon|x] = 0\)</span> implies that <span class="math inline">\(Cov(\varepsilon,x) = 0\)</span>, so that's the part that is violated.</li>
 <li>Data from Random Sample. One common concern here is that the observations in the data could have been <em>selected</em> in a particular fashion, which would make it less representative of the underlying population. Suppose we had ended up with individuals only from the richest neighborhood of town; Our interpretation the impact of education on wages might not be valid for other areas.</li>
-<li>Homoskedasticity. For correct inference (below!), we want to know whether the variance of <span class="math inline">\(\varepsilon\)</span> varies with our explanatory variable <span class="math inline">\(x\)</span>, or not. Here is a typical example where it does: <img src="06-StdErrors_files/figure-html/unnamed-chunk-6-1.png" width="672" /> As income increases, not all people increase their food consumption in an equal way. So <span class="math inline">\(Var(\varepsilon|x)\)</span> will vary with the value of <span class="math inline">\(x\)</span>, hence it won't be equal to the constant <span class="math inline">\(\sigma^2\)</span>.</li>
+<li>Homoskedasticity. For correct inference (below!), we want to know whether the variance of <span class="math inline">\(\varepsilon\)</span> varies with our explanatory variable <span class="math inline">\(x\)</span>, or not. Here is a typical example where it does: <img src="ScPoEconometrics_files/figure-html/unnamed-chunk-172-1.png" width="672" style="display: block; margin: auto;" /> As income increases, not all people increase their food consumption in an equal way. So <span class="math inline">\(Var(\varepsilon|x)\)</span> will vary with the value of <span class="math inline">\(x\)</span>, hence it won't be equal to the constant <span class="math inline">\(\sigma^2\)</span>.</li>
 <li><p>If the distribution of <span class="math inline">\(\varepsilon\)</span> is not normal, it is more cumbersome to derive theoretical results about inference.</p></li>
 </ol>
 </div>
